--- a/views/curso.html
+++ b/views/curso.html
@@ -94,7 +94,7 @@
             </div>
             <section class="curso">
                 <div class="container-cir">
-                    <a href="">
+                    <a href="videoaula.html">
                         <div class="container-circulo">
                             <img src="/src/img/video.png" alt="">
                         </div>
@@ -102,7 +102,7 @@
                     </a>
                 </div>
                 <div class="container-cir">
-                    <a href="">
+                    <a href="materiais.html">
                         <div class="container-circulo">
                             <img src="/src/img/materiais.png" alt="">
                         </div>
@@ -111,7 +111,7 @@
 
                 </div>
                 <div class="container-cir">
-                    <a href="">
+                    <a href="conteudo.html">
                         <div class="container-circulo">
                             <img src="/src/img/conteudo.png" alt="">
                         </div>
@@ -120,7 +120,7 @@
 
                 </div>
                 <div class="container-cir">
-                    <a href="">
+                    <a href="atividade.html">
                         <div class="container-circulo">
                             <img src="/src/img/atividade.png" alt="">
                         </div>
@@ -129,7 +129,7 @@
 
                 </div>
                 <div class="container-cir">
-                    <a href="">
+                    <a href="calendario.html">
                         <div class="container-circulo">
                             <img src="/src/img/calendadrio.png" alt="">
                         </div>
@@ -138,7 +138,7 @@
 
                 </div>
                 <div class="container-cir">
-                    <a href="">
+                    <a href="agenda.html">
                         <div class="container-circulo">
                             <img src="/src/img/agenda.png" alt="">
                         </div>
