--- a/views/calendario.html
+++ b/views/calendario.html
@@ -6,18 +6,9 @@
     <link rel="shortcut icon" type="imagex/png" href="/src/img/logo.ico">
     <title>GoLearn</title>
     <link rel="stylesheet" href="/css/index.css">
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js'></script>
-    <script>
-
-        document.addEventListener('DOMContentLoaded', function() {
-          var calendarEl = document.getElementById('calendar');
-          var calendar = new FullCalendar.Calendar(calendarEl, {
-            initialView: 'dayGridMonth'
-          });
-          calendar.render();
-        });
-  
-      </script>
+    <script src='/javascript/fullcalendar/index.global.min.js'></script>
+    <script src="/javascript/calendario.js"></script>
+    <script src="/javascript/locales/pt-br.global.min.js"></script>
 </head>
 <body>
     <header>
