--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,8 @@
 @import 'reset.css';
 @import 'playlist.css';
 @import 'global.css';
-@import 'infocurso.css'
+@import 'infocurso.css';
+@import 'bootstrap.css';
+@import 'fullcalander.css';
 
 
